# QuestEgo

./: README.md  convert_to_videos.sh
Session_20260625_123206/Take_001/: head_pose.csv  left_hand.csv  right_hand.csv  video_metadata.csv
Session_20260625_123206/Take_002/: head_pose.csv  left_hand.csv  right_hand.csv  video_metadata.csv
Session_20260625_123206/Take_003/: head_pose.csv  left_hand.csv  right_hand.csv  video_metadata.csv
Session_20260625_123206/Take_004/: head_pose.csv  left_hand.csv  right_hand.csv  video_metadata.csv
Session_20260625_123206/Take_005/: head_pose.csv  left_hand.csv  right_hand.csv  video_metadata.csv
Session_20260625_123206/Take_006/: head_pose.csv  left_hand.csv  right_hand.csv  video_metadata.csv
Session_20260625_123206/Take_007/: head_pose.csv  right_hand.csv  video_metadata.csv
Session_20260625_123206/Take_008/: head_pose.csv  left_hand.csv  right_hand.csv  video_metadata.csv
Session_20260625_123206/Take_009/: head_pose.csv  left_hand.csv  right_hand.csv  video_metadata.csv
Session_20260625_123206/Take_010/: head_pose.csv  left_hand.csv  right_hand.csv  video_metadata.csv
install/: local_setup.sh  setup.sh
install/openarm_bimanual_moveit_config/share/ament_index/resource_index/parent_prefix_path/: openarm_bimanual_moveit_config
install/openarm_bimanual_moveit_config/share/openarm_bimanual_moveit_config/: package.sh
install/openarm_bringup/lib/openarm_bringup/: batch_record.py
install/openarm_bringup/share/openarm_bringup/: local_setup.dsv  package.dsv  package.ps1  package.sh  package.xml
install/openarm_bringup/share/openarm_bringup/config/: calibration.yaml
install/openarm_description/share/openarm_description/: local_setup.sh  package.sh
install/openarm_description/share/openarm_description/cmake/: openarm_descriptionConfig.cmake
install/openarm_description/share/openarm_description/launch/: display.launch.py
install/openarm_description/share/openarm_description/urdf/: openarm_single.urdf
log/: latest_build
src/openarm_bringup/: CMakeLists.txt
src/openarm_bringup/launch/: record_take.launch.py
src/openarm_bringup/scripts/: hand_pose_to_moveit.py  ik_controller.py  joint_state_recorder.py
src/openarm_description/: CMakeLists.txt  package.xml
src/openarm_description/meshes/: README.md
src/openarm_description/rviz/: openarm_default.rviz
src/openarm_description/urdf/: openarm_bimanual.urdf
